# Telegram__AI

./: .env  .env.example  .replit  LOCAL_SETUP.md  README.md  bot.py  constants.py  data_manager.py  gemini_client.py  install.bat  install.sh  local_requirements.txt  main.py  pyproject.toml  replit.md  users.json  validators.py  voice_processor.py
